[package]
name = "stream-tls-client_hello-detector"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "stream TLS ClientHello detector"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/vkill/rust-tls-client_hello"
homepage = "https://github.com/vkill/rust-tls-client_hello"
documentation = "https://docs.rs/stream-tls-client_hello-detector"
keywords = ["TLS", "ClientHello"]
categories = []
readme = "README.md"

[features]
default = ["std_io"]
std_io = ["std-io-peek"]
futures_util_io = ["futures-util-io-peek"]

[dependencies]
tls-client_hello-parser = { path = "../tls-client_hello-parser", version = "0.1", default-features = false, features = [] }

std-io-peek = { version = "0.1", default-features = false, features = [], optional = true }
futures-util-io-peek = { version = "0.1", default-features = false, features = [], optional = true }

[dev-dependencies]
rustls = { version = "0.20" }
rustls-pemfile = { version = "1" }
webpki-roots = { version = "0.22" }
async-tls = { version = "0.12" }

futures-executor = { version = "0.3", features = ["thread-pool"] }
futures-util-io-peek = { version = "0.1" }
futures-util = { version = "0.3" }
async-io = { version = "1" }
