[package]
name = "stream-tls-client_hello-detector"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "stream TLS ClientHello detector"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/tls-rs"
homepage = "https://github.com/bk-rs/tls-rs"
documentation = "https://docs.rs/stream-tls-client_hello-detector"
keywords = ["TLS", "ClientHello"]
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["std_io"]
std_io = ["std-io-peek"]
futures_util_io = ["futures-util-io-peek"]

[dependencies]
tls-client_hello-parser = { default-features = false, path = "../tls-client_hello-parser" }

std-io-peek = { version = "0.1", default-features = false, optional = true }
futures-util-io-peek = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
tls-mkcert-test = { path = "../tls-mkcert-test" }
async-tls = { version = "0.12" }

async-io = { version = "1" }
futures-util-io-peek = { version = "0.1", default-features = false, features = ["async_io_async"] }

futures-executor = { version = "0.3", features = ["thread-pool"] }
futures-util = { version = "0.3", features = ["io"] }

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
