[package]
name = "tls-alpn-protocol"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "TLS Application-Layer Protocol Negotiation (ALPN) Protocol"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/tls-rs"
homepage = "https://github.com/bk-rs/tls-rs"
documentation = "https://docs.rs/tls-alpn-protocol"
keywords = []
categories = []
readme = "README.md"

[dependencies]
