[package]
name = "tls-client_hello-parser"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "TLS ClientHello parser"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/vkill/rust-tls-client_hello"
homepage = "https://github.com/vkill/rust-tls-client_hello"
documentation = "https://docs.rs/tls-client_hello-parser"
keywords = ["TLS", "ClientHello"]
categories = []
readme = "README.md"

[dependencies]
rustls = { version = "0.18", default-features = false, features = [] }
